# runnersutah

./: .gitignore  README.md  db.sqlite3  db_migration.py  docker-compose.yml  manage.py  old.sqlite3  pyproject.toml
.github/workflows/: django.yml
common/: context.py  utils.py
config/: example.env
customers/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
customers/migrations/: 0001_initial.py
email/: test.py
inventory/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
inventory/migrations/: 0001_initial.py
products/: forms.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py
runnersutah/: asgi.py  settings.py  urls.py  wsgi.py
src/: Dockerfile  manage.py
src/customers/: admin.py  forms.py  models.py  urls.py  views.py
src/inventory/: admin.py  models.py
src/products/: admin.py  models.py
src/runnersutah/: asgi.py  settings.py  urls.py  wsgi.py
src/utils/: measure.py  model_commons.py
static/base/: base.css  sidebar.css  style.css  top_bar.css
static/css/: base.css  card.css  login_page.css  table.css
static/customers/: customer_list.css  index.css  login.css  mailing_list.css  mailing_list.js  register.css  style.css
static/generic/: card.css  paginator.css  table.css
static/js/: expanding_options.js  mailing_list.js
static/products/: product_detail.css  product_list.css
templates/base/: administration.html  base.html  customer_manage.html  inventory_manage.html  product_manage.html  reports.html  (+1 more)
user/: forms.py  urls.py
utils/: mixins.py  urls.py  views.py
(+64 files in other folders)
