[tool.poetry]
name = "runnersutah"
version = "0.1.0"
description = ""
authors = ["Treysen-Zobell <36913811+Treysen-Zobell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.125.0"
django = "^5.0.4"
django-mathfilters = "1.0.0"
django-widget-tweaks = "1.5.0"
black = "24.4.0"
openpyxl = "3.1.2"
xlsxwriter = "3.2.0"
django-extra-views = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
