[tool.poetry]
name = "runnersutah"
version = "0.1.0"
description = ""
authors = ["Treysen-Zobell <36913811+Treysen-Zobell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
faker = "^26.0.0"
django-extensions = "^3.2.3"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
